@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4927
+//     Runtime Version:2.0.50727.5444
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -21,9 +21,7 @@ namespace MySql.Data.MySqlClient.Properties {
     // with the /str option, or rebuild your VS project.
     [global::System.CodeDom.Compiler.GeneratedCodeAttribute("System.Resources.Tools.StronglyTypedResourceBuilder", "2.0.0.0")]
     [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
-#if !CF
     [global::System.Runtime.CompilerServices.CompilerGeneratedAttribute()]
-#endif
     public class Resources {
         
         private static global::System.Resources.ResourceManager resourceMan;
@@ -311,6 +309,15 @@ namespace MySql.Data.MySqlClient.Properties {
         public static string FatalErrorReadingResult {
             get {
                 return ResourceManager.GetString("FatalErrorReadingResult", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to File based certificates are only supported when connecting to MySQL Server 5.1 or greater..
+        /// </summary>
+        public static string FileBasedCertificateNotSupported {
+            get {
+                return ResourceManager.GetString("FileBasedCertificateNotSupported", resourceCulture);
             }
         }
         
